[gd_scene load_steps=3 format=3 uid="uid://cb5iwrhyvdp7c"]

[ext_resource type="Script" uid="uid://c4b4vavruiyuj" path="res://game/game_block/game_block.gd" id="1_d16ig"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kf2vi"]
size = Vector2(105, 48)

[node name="GameBlock" type="CharacterBody2D" groups=["game_block"]]
z_index = 1
script = ExtResource("1_d16ig")

[node name="WhiteColorRect" type="ColorRect" parent="."]
visible = false
offset_right = 105.0
offset_bottom = 48.0

[node name="BlackColorRect" type="ColorRect" parent="."]
visible = false
offset_right = 105.0
offset_bottom = 48.0
color = Color(0, 0, 0, 1)

[node name="LeftRayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 60)

[node name="RightRayCast2D" type="RayCast2D" parent="."]
position = Vector2(105, 0)
target_position = Vector2(0, 60)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(52.5, 24)
shape = SubResource("RectangleShape2D_kf2vi")
